--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -257,3 +257,89 @@
         }
     }
 }
+
+.modal-child_message {
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    height: 20vh;
+    // min-height: 300px;
+    width: 47vw;
+    min-width: 400px;
+    transform: translate(-50%, -50%);
+    border-radius: 6px;
+    box-shadow: 3px 3px 20px black;
+    padding: 3%;
+  }
+
+.delete-message-header {
+    display: flex;
+    justify-content: space-between;
+    h2 {
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+    button {
+        color: gray;
+        background-color: transparent;
+        // padding: 2%;
+        height: 2rem;
+        width: 2rem;
+        border: none;
+        border-radius: 6px;
+        &:hover {
+          background-color: rgb(240, 240, 240);
+        }
+    }
+}
+
+.delete-message-warning {
+       font-size: .9rem;
+       padding-bottom: 2%;
+}
+
+.delete-message-container {
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    display: flex;
+    margin-top: 1%;
+    padding: 2%;
+}
+
+.delete-message-body {
+    padding-left: 1%;
+    span {
+        font-weight: bold;
+    }
+}
+
+.delete-message-buttons {
+    display: flex;
+    justify-content: right;
+    button {
+        padding: 1%;
+        margin: 1%;
+        margin-top: 4%;
+        border-radius: 4px;
+        cursor: pointer;
+        background-color: transparent;
+        width: 6rem;
+        font-weight: bold;
+    }
+    .cancel-delete {
+        border: 1px solid lightgrey;
+        &:hover {
+            background-color: rgb(235, 235, 235);
+        }
+    }
+    .delete {
+        border: none;
+        background-color: rgb(214, 0, 72);
+        color: white;
+        &:hover {
+            background-color: rgb(207, 56, 106);
+            box-shadow: -1px 1px 5px gray;
+        }
+    }
+}
