--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -226,6 +226,7 @@
     border-radius: 4px;
     padding: 1%;
     width: 250px;
+    overflow-y: auto;
     // margin-top: 5%;
     li {
         margin: 5%;
@@ -238,6 +239,7 @@
 #see-all-users {
     cursor: pointer;
     color: lightgrey;
+    margin-left: 5px;
 }
 
 #chat-details:hover .channel-content {
