--- a/app/assets/stylesheets/components/_side_nav.scss
+++ b/app/assets/stylesheets/components/_side_nav.scss
@@ -63,7 +63,7 @@
     align-items: center;
     padding-left: 5%;
     padding-right: 5%;
- 
+    // cursor: pointer;
     height: 4vh;
     // h3 {
     //     height: 4vh;
@@ -81,6 +81,7 @@
     }
     span {
         padding-left: 5px;
+        cursor: pointer;
     }
 }
 
