set up logout modal

--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -94,6 +94,15 @@
     background-color: black;
 }
 
+.user-icon-logout {
+    height: 2rem;
+    width: 2rem;
+    // border: 1px solid black;
+    color: white;
+    background-color: green;
+    padding: 1px;
+    margin-right: 10px;
+}
 .message-main-container {
     padding-left: 1%;
     padding-right: 5%;
