Include display name in user search

--- a/app/assets/stylesheets/components/_chat_room.scss
+++ b/app/assets/stylesheets/components/_chat_room.scss
@@ -245,7 +245,7 @@
     // }
 }
 #full-users-display {
-    font-weight: bold;
+    // font-weight: bold;
     padding-left: .5rem;
 }
 #full-users-username {
